<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand_name"
        android:id="@+id/brand_name_TV"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/model_name_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/purple_500"
        android:text="@string/model_name"
        app:layout_constraintTop_toTopOf="@id/brand_name_TV"
        app:layout_constraintStart_toEndOf="@id/brand_name_TV"
        android:layout_marginStart="4dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/label_price"
        app:layout_constraintTop_toBottomOf="@id/brand_name_TV"
        app:layout_constraintStart_toStartOf="@id/brand_name_TV"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/amountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/label_price"
        app:layout_constraintStart_toEndOf="@id/label_price"
        android:layout_marginStart="4dp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/currency"
        app:layout_constraintTop_toTopOf="@id/amountTV"
        app:layout_constraintStart_toEndOf="@id/amountTV"
        android:layout_marginStart="4dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>